Raj Political Tree Rework

--- a/localisation/english/ww1_raj_l_english.yml
+++ b/localisation/english/ww1_raj_l_english.yml
@@ -473,13 +473,6 @@
  ww1_raj.9.d:0 "President [USA.getleader] has responded negatively to our offer to co-operate in matters related to seditious Indian movements. This will prevent us to obtain much needed information on, notably, the Ghadar Party."
  ww1_raj.9.a:0 "Quite the setback."
 
- ww1_raj.10.t:0 "The Question of Natal"
- ww1_raj.10.d:0 "Indian immigration to South Africa can be traced back to the mid-19th century when British colonial authorities sought to address the labor shortages in the British-controlled colonies, including South Africa. Indian indentured laborers were recruited from British India, primarily from regions such as Gujarat, to work on sugar plantations and other agricultural enterprises in Natal. Initially, Indian laborers were brought to South Africa under contracts that bound them to work for a specific period in exchange for passage, housing, and minimal wages. However, many Indians chose to stay in South Africa after completing their indenture contracts, seeking opportunities in trade, commerce, and other professions. This influx of Indian immigrants contributed to spark tensions with the white settler community, who viewed Indians as threats to their privileged status. In response to growing white supremacist sentiments, the South African government enacted a series of discriminatory laws and policies aimed at segregating and marginalizing the Indian population. The most extreme piece of legislation being an 1891 statute prohibiting Indians from living in the Orange Free State.\n\nThe Dominion of India has asked us to pressure the South African government on these issues, particularly for the Natal region. Of course, the South African government argues that their legislation regarding Indian immigrants is entirely constitutional and that forcing them to remove thoses laws would infringe on their sovereignty. In the end, the choice is ours."
- ww1_raj.10.a:0 "Favour South-Africa."
- ww1_raj.10.b:0 "Favour India."
- RAJ_eng_natal_answer_a:0 "§RSouth-Africa will continue their anti-Indian immigration laws.§!"
- RAJ_eng_natal_answer_b:0 "§RSouth-Africa will stop their anti-Indian immigration laws.§!"
-
  ww1_raj.11.t:0 "Britain Favours South-Africa!"
  ww1_raj.11.d:0 "Prime Minister [ENG.getleader] has responded negatively to our plea regarding South Africa's anti-Indian immigration laws. He cited South Africa's right to enact its own laws on its sovereign territory, an assertion we cannot dispute. For now, the Natal question is settled."
  ww1_raj.11.a:0 "Quite the setback."
@@ -669,15 +662,15 @@
  # Montagu Chelmsford Reforms
  RAJ_montagu_chelmsford_reforms_category:0 "Montagu-Chelmsford Reforms"
 
- RAJ_establish_committee_on_home_administration:0 "Establish the Committee on Home Administration"
+ RAJ_establish_committee_on_home_administration:0 "Committee on Home Administration"
  RAJ_establish_committee_on_home_administration_reward:0 "The §YCommittee on Home Administration§! will now be established!"
  committee_on_home_administration_established:0 "§YCommittee on Home Administration Established§!"
 
- RAJ_establish_feetham_function_committee:0 "Establish the Feetham Function Committee"
+ RAJ_establish_feetham_function_committee:0 "Feetham Function Committee"
  RAJ_establish_feetham_function_committee_reward:0 "The §YFeetham Function Committee§! will now be established!"
  feetham_function_committee_established:0 "§YFeetham Function Committee Established§!"
 
- RAJ_establish_southborough_franchise_committee:0 "Establish Southborough Franchise Committee"
+ RAJ_establish_southborough_franchise_committee:0 "Southborough Franchise Committee"
  RAJ_establish_southborough_franchise_committee_reward:0 "The §YSouthborough Franchise Committee§! will now be established!"
  southborough_franchise_committee_established:0 "§YSouthborough Franchise Committee Established§!"
 
@@ -888,7 +881,7 @@ RAJ_indian_army_act:0 "Indian Army Act"
 RAJ_indian_army_act_desc:0 ""
 RAJ_indian_army_act_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_organization_texticon Division Organization:§G +10.0%§!\n£GFX_defence_texticon Division Defense:§G +10.0%§!\n\n"
 
-RAJ_defence_of_the_northwest_frontier:0 "Defence of the Northwest Frontier"
+RAJ_defence_of_the_northwest_frontier:0 "Protect the Northwest Frontier"
 RAJ_defence_of_the_northwest_frontier_desc:0 ""
 RAJ_defence_of_the_northwest_frontier_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_defence_texticon Division Defense:§G +5.0%§!"
 
@@ -1063,6 +1056,18 @@ RAJ_ensure_economic_independence_and_housing_reward:0 "\nUnlocks Decisions:\n§Y
 RAJ_august_declaration:0 "August Declaration"
 RAJ_august_declaration_desc:0 ""
 
+RAJ_feetham_function_committee:0 "Establish the Feetham Function Committee"
+RAJ_feetham_function_committee_desc:0 ""
+RAJ_feetham_function_committee_reward:0 "We will establish the §YFeetham Function Committee§!, which will determine which subjects will fall under Provincial Jurisdiction and which will remain under the responsibility of the Central Government.\n\nThey will submit a report to us in §Y365 days§!.\n\n"
+
+RAJ_southborough_franchise_committee:0 "Establish the Franchise Committee"
+RAJ_southborough_franchise_committee_desc:0 ""
+RAJ_southborough_franchise_committee_reward:0 "We will establish the §YSouthborough Franchise Committee§!, which will determine which subjects need to be represented in the next legislatures.\n\nThey will submit a report to us in §Y365 days§!.\n\n"
+
+RAJ_committee_on_home_administration:0 "Committee on Home Administration"
+RAJ_committee_on_home_administration_desc:0 ""
+RAJ_committee_on_home_administration_reward:0 "We will establish the §YCommittee on Home Administration§!, which will determine the effectiveness of existing administrative structures and suggest improvements to make governance more efficient and responsive.\n\nThey will submit a report to us in §Y365 days§!.\n\n"
+
 RAJ_montagu_chelmsford_reforms:0 "Establish Reformist Committees"
 RAJ_montagu_chelmsford_reforms_desc:0 ""
 
@@ -1131,8 +1136,6 @@ RAJ_review_our_foreign_policy:0 "Review our Foreign Policy"
 RAJ_review_our_foreign_policy_desc:0 ""
 RAJ_support_the_white_movement:0 "Support the White Movement"
 RAJ_support_the_white_movement_desc:0 ""
-RAJ_malleson_mission:0 "Malleson Mission"
-RAJ_malleson_mission_desc:0 ""
 RAJ_treaty_of_rawalpindi:0 "Treaty of Rawalpindi"
 RAJ_treaty_of_rawalpindi_desc:0 ""
 RAJ_treaty_of_kabul:0 "Treaty of Kabul"
