--- a/localisation/english/ww1_raj_l_english.yml
+++ b/localisation/english/ww1_raj_l_english.yml
@@ -901,7 +901,7 @@ RAJ_pursue_kitchener_reforms:0 "Pursue Kitchener Reforms"
 RAJ_pursue_kitchener_reforms_desc:0 ""
 RAJ_pursue_kitchener_reforms_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_organization_texticon Division Organization:§G +10.0%§!\n£GFX_army_experience Army Experience Gain:§G +0.03§! daily"
 
-RAJ_the_grand_war:0 "The Grand War"
+RAJ_the_grand_war:0 "The Great War Redux"
 RAJ_the_grand_war_desc:0 ""
 RAJ_the_grand_war_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_organization_texticon Division Organization:§G +10.0%§!\n£GFX_attrition_texticon Division Attrition:§G -10.0%§!"
 
