--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2853,8 +2853,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_full_male_suffrage:0 "Full Male Suffrage"
  ROM_the_natural_enemy_idea:0 "The Natural Enemy"
  ROM_social_welfare_idea:0 "State-Funded Social Welfare"
- ROM_build_up_more_defenses_idea:0 "Focus on Fortifications"
- ROM_independance_on_resources:0 "Independance on Resources"
+ROM_local_autonomy_in_new_territories_idea:0 "Temporary Local Autonomy in New Territories"
 
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
