--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5590,7 +5590,7 @@ ROM_de_politicize_key_cabinet_positions:0 "Depoliticize Key Cabinet Positions"
 ROM_de_politicize_key_cabinet_positions_desc:0 ""
 this_wont_do_anything_if_completed_jewish_focus_tt:0 "§RThis focus will not have any effects if §R§YExodus to Romania§Y§R or §R§YSafe Haven for Jews§Y§R are completed.§R§W"
 this_wont_do_anything_if_completed_male_suffrage_focus_tt:0 "§RThis focus give you the National Spirit if the focus '§R§YPursue Full Male Suffrage§Y§R' is completed.§R§W"
-ROM_end_antisemitism:0 "Remove Antisemistic Values from the Party"
+ROM_end_antisemitism:0 "Address our Past"
 ROM_end_antisemitism_desc:0 ""
 ROM_land_reform_in_new_territories:0 "Land Reform in New Territories"
 ROM_local_autonomy_in_new_territories:0 "Local Autonomy in New Territories"
