--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5392,13 +5392,13 @@ ROM_encourage_romanian_migration_dobruja_desc:0 ""
 ROM_concessions_to_muslim_romanians:0 "Concessions to Muslim Romanians"
 ROM_concessions_to_muslim_romanians_desc:0 ""
 ROM_dreams_of_a_great_romania:0 "Dreams of a Greater Romania"
-ROM_dreams_of_a_great_romania_desc:0 ""
+ROM_dreams_of_a_great_romania_desc:0 "There is a lot of land currently controlled by other countries that should really belong to us. If we wish to reclaim it, we will need to bolster our military as well as our foreign relations with countries who may server our interests in claiming land from our neighbors."
 ROM_negotiations_for_bukovina:0 "Negotiations for Bukovina"
 ROM_negotiations_for_bukovina_desc:0 ""
 ROM_support_from_germany:0 "Krupp Weapons"
-ROM_support_from_germany_desc:0 ""
+ROM_support_from_germany_desc:0 "The German company Krupp has been a reliant supplier of guns for the Romanian army for a long time now. Let's increase orders from them to help expand our military."
 ROM_french_industrial_support:0 "French Industrial Support"
-ROM_french_industrial_support_desc:0 ""
+ROM_french_industrial_support_desc:0 "France has one of the strongest economies in the world, and there's much we can learn from them. Let's invite a few of their industrial experts to Romania to help improve the productivity of our economy."
 ROM_increase_french_weapon_purchases:0 "Increase French Weapon Purchases"
 ROM_increase_french_weapon_purchases_desc:0 ""
 ROM_welcome_anglo_italian_banks:0 "Welcome Anglo-Italian Banks"
