Working on Haldane Mission Mechanic
-Need to go into game and test this all when home
-Need to alter which focuses start the mission
-Need to make sure Hollweg is aroun

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -194,6 +194,10 @@ GER_influence_battle_minimal_hollweg:0 "slightly aligned with Hollweg"
 GER_influence_battle_neutral:0 "neutral"
 GER_influence_battle_minimal_tirpitz:0 "slightly aligned with Tirpitz"
 GER_influence_battle_majority_tirpitz:0 "strongly aligned with Tirpitz"
+ww1_germanrework.33.t:0 "The Haldane Mission Scuppered"
+ww1_germanrework.33.d:0 ""
+ww1_germanrework.34.t:0 "The Haldane Mission Successful"
+ww1_germanrework.34.d:0 ""
 
 #Reichstag
 GER_reichstag_category:0 "Reichstag"
