--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -245,6 +245,10 @@ ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit 
 ww1_germanytooltip2:0 "Whichever faction in the right wing is more powerful will determine the outcome of German politics after the inevitable major war in Europe. However, empowering the nationalists will be difficult and will result in an unstable empire prior to the war"
 ww1_germanytooltip3:0 "This focus will be automatically completed if a §cconservative§! chancellor comes into power"
 ww1_germanytooltip4:0 "After completing this focus we will have to expand the navy by a set amount in a certain amount of time"
+ww1_germanytooltip5:0 "The preperations for the Haldane mission will begin, by picking this focus you are playing the perspective of the pro-British Chancellor, Hollweg"
+ww1_germanytooltip6:0 "The preperations for the Haldane mission will begin, by picking this focus you are playing the perspective of the pro-navy Admiral, Tirpitz"
+ww1_germanytooltip7:0 "Taking this focus will increase the Kaiser's support of Hollweg"
+ww1_germanytooltip8:0 "Taking this focus will increase the Kaiser's support of Tirpitz"
 
 #Dynamic Modifiers
 GER_agricultural_incentives:0 "Agricultural Incentives"
