--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2498,6 +2498,10 @@ FRA_you_can_change_the_prime_minister_later:0 "A §YDecision§! will remain avai
  ww1_brazil.34.d: "The delegates managed to found the common ground and the conference succeeded!"
  ww1_brazil.34.a: "A victory for South America!"
  ww1_brazil.34.b: "They are fools!"
+ ww1_brazil.35.t: "Sell the Rio de Janeiro Battleship?"
+ ww1_brazil.35.d: "We clearly went over budget, and our relations with our neighbors are warming, perhaps we should just sell the ship?"
+ ww1_brazil.35.a: "We need the money."
+ ww1_brazil.35.b: "We need that ship!"
  
  ww1_brazil.100.d: "A guerrilla war for land between settlers and landowners has started in Brazil. The war has its casus belli in the social conflicts in the region, the result of local disobediences, particularly regarding the regularization of land ownership on the part of the caboclos. The conflict is permeated by religious fanaticism expressed by the messianism and faith of the rebellious caboclos that they are engaged in a religious war; at the same time, it reflects the dissatisfaction of the population with its material situation."
  ww1_brazil.100.a: "They couldn't defeat a group of peasants?"
