--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1906,6 +1906,7 @@
  VICTORY_POINTS_3161: "Kotka"
  VICTORY_POINTS_11121: "Brahestad"
  VICTORY_POINTS_11519: "Liége"
+ VICTORY_POINTS_7971: "Suzhou"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
