--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -8066,6 +8066,69 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  JAP_focus_on_domestication:0 "Focus on Domestication"
  JAP_focus_on_domestication_desc:0 "Locating weapons production is a costly and time-consuming process, but it's worth the pain for the sake of national security."
 
+ JAP_second_katsura_cabinet:0 "2nd Katsura Cabinet"
+ JAP_second_katsura_cabinet_desc:0 ""
+ JAP_question_for_debt:0 "Question for Debts"
+ JAP_question_for_debt_desc:0 ""
+ JAP_policies_on_chosen:0 "Policies On Chōsen"
+ JAP_policies_on_chosen_desc:0 ""
+ JAP_internal_affairs:0 "Internal Affairs"
+ JAP_internal_affairs_desc:0 ""
+ JAP_socialist_disturbance:0 "Socialist Disturbance"
+ JAP_socialist_disturbance_desc:0 ""
+ JAP_tenno_heika_banzai:0 "Tenno Heika Banzai!"
+ JAP_tenno_heika_banzai_desc:0 ""
+ JAP_degrade_ashikaga:0 "Degrade Ashikaga"
+ JAP_degrade_ashikaga_desc:0 ""
+ JAP_time_to_go_hunt:0 "Time To Go Hunt"
+ JAP_time_to_go_hunt_desc:0 ""
+ JAP_crush_labor_union:0 "Crush the Labor Union"
+ JAP_crush_labor_union_desc:0 ""
+ JAP_accept_labor_union:0 "Accept the Labor Union"
+ JAP_accept_labor_union_desc:0 ""
+ JAP_taigyaku_jiken:0 "Taigyaku Jiken"
+ JAP_taigyaku_jiken_desc:0 ""
+ JAP_all_guilty:0 "All Guilty!"
+ JAP_all_guilty_desc:0 ""
+ JAP_healthy_finances:0 "Healthy Finances"
+ JAP_healthy_finances_desc:0 ""
+ JAP_inclusive_finances:0 "Inclusive Finances"
+ JAP_inclusive_finances_desc:0 ""
+ JAP_immediate_retrenchment:0 "Immediate Retrenchment"
+ JAP_immediate_retrenchment_desc:0 ""
+ JAP_reduce_salary:0 "Reduce Salaries"
+ JAP_reduce_salary_desc:0 ""
+ JAP_increase_salary:0 "Increase Salaries"
+ JAP_increase_salary_desc:0 ""
+ JAP_compromise_on_austerity:0 "Compromise On Austerity"
+ JAP_compromise_on_austerity_desc:0 ""
+ JAP_increase_taxes:0 "Increase Taxes"
+ JAP_increase_taxes_desc:0 ""
+ JAP_colonial_taxes:0 "Colonial Taxes"
+ JAP_colonial_taxes_desc:0 ""
+ JAP_more_land_taxes:0 "More Land Taxes"
+ JAP_more_land_taxes_desc:0 ""
+ JAP_build_up_reserves:0 "Build Up Reserves"
+ JAP_build_up_reserves_desc:0 ""
+ JAP_fix_1911_budget:0 "Fix 1911 Budget"
+ JAP_fix_1911_budget_desc:0 ""
+ JAP_broad_gauge_railroad_plan:0 "Broad Gauge Railroad Plan"
+ JAP_broad_gauge_railroad_plan_desc:0 ""
+ JAP_japan_in_the_world:0 "Japan In The World"
+ JAP_japan_in_the_world_desc:0 ""
+ JAP_katsura_taft_agreement:0 "Katsura-Taft Agreement"
+ JAP_katsura_taft_agreement_desc:0 ""
+ JAP_align_with_germany:0 "Align With Germany"
+ JAP_align_with_germany_desc:0 ""
+ JAP_revise_ansei_treaties:0 "Revise Ansei Treaties"
+ JAP_revise_ansei_treaties_desc:0 ""
+ JAP_pacific_ally:0 "Pacific Ally"
+ JAP_pacific_ally_desc:0 ""
+ JAP_stout_lion:0 "Stout Lion"
+ JAP_stout_lion_desc:0 ""
+ JAP_paris_holiday:0 "Paris Holiday"
+ JAP_paris_holiday_desc:0 ""
+
 
  USA_USVI_desc:0 ""
 
