Revert "Productional Efficiency and Nationalise Colonial Diamond Deposits effects"
This reverts commit 3f97d13b6c308649d96feccff624c2dd9c77c326.

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -40,7 +40,6 @@ GER_mass_produce_v_30:0 "V-30 Mass Production"
 GER_mass_produce_v_30_desc:0 ""
 GER_tirpitzs_grand_fleet_idea:0 "Tirpitz's Grand Fleet"
 GER_tirpitzs_grand_fleet_idea_desc:0 ""
-GER_nationalise_diamond_deposits:0 "Nationalise Colonial Diamond Deposits"
 
 #Characters
 GER_ernst_von_heydbrand:0 "Ernst von Heydbrand"
@@ -255,7 +254,6 @@ ww1_germanytooltip8:0 "Taking this focus will increase the Kaiser's support of T
 GER_agricultural_incentives:0 "Agricultural Incentives"
 GER_new_major_railway_connection:0 "New Major Railway Connection"
 GER_german_migration:0 "German Migration"
-GER_porductional_efficiency:0 "Productional Efficiency"
 
 #Focuses
 
@@ -264,7 +262,7 @@ GER_wilhelmine_germany:0 "Wilhelmine Germany"
 GER_freie_volksbuhne:0 "Freie Volksbuhne"
 GER_appoint_solf_as_colonial_secretary:0 "Appoint Solf as Colonial Secretary"
 GER_productional_efficiency:0 "Productional Efficiency"
-GER_nationalising_colonial_diamond_deposists:0 "Nationalise Colonial Diamond Deposits"
+GER_nationalising_colonial_diamond_deposists:0 "Nationalise Colonial Diamond Desposists"
 GER_deal_with_the_sokehs_rebellion:0 "Deal with the Sokehs Rebbelion"
 GER_organise_german_settlement:0 "Organise German Settlement"
 GER_colonial_cooperation_with_belgian_companies:0 "Colonial Cooperation with Belgian Companies"
@@ -279,7 +277,7 @@ GER_german_peoples_get_german_pensions:0 "German Peoples get German Pensions"
 GER_memories_of_1871:0 "Memories of 1871"
 GER_treading_the_centre_line:0 "Treading the Centre Line"
 GER_the_growing_pan_german_influence:0 "The Growing Pan-German Influence"
-GER_prussian_militarism_at_its_finest:0 "Prussian Militarism at its Finest"
+GER_prussian_militarism_at_its_finest:0 "Prussian Militarism at it's Finest"
 GER_campaining_for_the_german_identity:0 "Campaining for the German Identity"
 GER_adressing_the_matter_of_german_identity:0 "Adressing the Matter of German Identity"
 GER_an_empire_of_many_peoples:0 "An Empire of Many Peoples..."
