--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -11438,6 +11438,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_serbia.62.t:0 "Pera Velimirović Dies"
  ww1_serbia.62.d:0 "Former prime minister Petar Velimirović has died in his home in Beograd. A veteran of the Radical political organization, he was one of the party founders and member since it's conception. A proud democrat, inspired by the ideas of Svetozar Marković, he was a fierce opponent of the Obrenović dynasty, having taken part in Timok rebellion and then following Pašić in Bulgaria, surviving and fighting for democracy ever since. He was leader of the coalition of the two radical parties since 1908, and guided our country through Annexation crisis until his replacement by Stojan Novaković and expansion of the coalition. Prime Minister [SER.GetLeader] has expressed sorrow over the loss of an influential statesman."
  ww1_serbia.62.a:0 "May he rest in peace"
+ ww1_serbia.63.t:0 "Ilija Gojković Killed"
+ ww1_serbia.63.d:0 "While travelling towards the Solun front from his treatment in France, general Ilija Gojković's ship was struck by a German U39 torpedo U-boat. After evacuation of the officers from the boat, the general entered the lifeboat. After submarine emerged and offered surrender, the general shouted "The Serbian general never surrenders", took out his gun and started shooting at the submarine, which retaliated with machine gun fire, killing the general and sinking the boat into Ionian Sea."
+ ww1_serbia.63.a:0 "A hero's death."
  ww1_serbia.100.t: "Black Hand"
  ww1_serbia.100.d: "Rumors have been raised among the territorial surveillance agents. An organization named Black Hand would gain influence in the country. This group would be armed and would have participated in the seizure of power by Petar I by killing the previous family in 1903. Although they are only a marginal force, they seem to be taking shape."
  ww1_serbia.100.a: "Worrying..."
