--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1603,13 +1603,14 @@
  grand_coalition:0 "Grand Coalition is Ruling §Y[SER.getFlag][SER.getName]§!"
  Ser_Bul_treaty:0 "§Y[SER.getFlag][BUL.getFlag][SER.getAdjective]-[BUL.getAdjective]§! Friendship Treaty is already Signed"
  SER_seize_Ohrid:0 "Seize Ohrid"
- SER_promote_terzic:0 "Promote Terzic"
- SER_promote_kondic:0 "Promote Kondic"
- SER_promote_pavlovic:0 "Promote Pavlovic"
- SER_promote_pesic:0 "Promote Pesic"
- SER_promote_hadzic:0 "Promote Hadzic"
- SER_promote_vasic:0 "Promote Vasic"
- SER_promote_rasic:0 "Promote Rasic"
+ SER_promote_terzic:0 "Promote Terzić"
+ SER_promote_kondic:0 "Promote Kondić"
+ SER_promote_pavlovic:0 "Promote Pavlović"
+ SER_promote_pesic:0 "Promote Pesić"
+ SER_promote_hadzic:0 "Promote Hadzić"
+ SER_promote_vasic:0 "Promote Vasić"
+ SER_promote_rasic:0 "Promote Rasić"
+ SER_promote_gojkovic:0 "Promote Gojković"
  
  MNT_nikola_i_absolute_monarch:0 "Assign Emergency Autocratic Powers"
  AST_lessons_of_war:0 "Lessons of war"
