Industrial Tree and Other Stuff

--- a/localisation/english/ww1_raj_l_english.yml
+++ b/localisation/english/ww1_raj_l_english.yml
@@ -550,8 +550,11 @@
  #############
  # DECISIONS #
  #############
-
+ 
+ # State Modifiers
  RAJ_princely_state_agency:0 "Princely States"
+ RAJ_invest_in_state:0 "Provincial Investments"
+ RAJ_punjabi_martial_races:0 "Punjabi Martial Races"
  
  # Viceroy Executive Council
  RAJ_viceroy_executive_council_category:0 "Viceroy's Executive Council Decisions"
@@ -822,6 +825,7 @@ RAJ_ordnance_factory_board_reward:0 ""
 
 RAJ_invest_in_punjab:0 "Invest in Punjab"
 RAJ_invest_in_punjab_desc:0 "Located near the Northwestern province, Punjab is one of our most promising province. The land's irrigability was greatly improved by irrigation projects introduced in 1885, and now we only have to reap the benefits of such fertile land."
+RAJ_improve_max_factories_in_state:0 "Modify '§YDe-Industrialisation§!' by:\n£GFX_civ_factory Max Factories in a State:§G +2.5%§!"
 
 RAJ_invest_in_delhi:0 "Invest in Delhi"
 RAJ_invest_in_delhi_desc:0 "Former capital of the Mughal empire, Delhi is one of our fastest growing city. While the majority of the city's surroundings are rural and used for cultivating crops such as wheat, barley, millet, and pulses, it is worth noting that Delhi is also highly industrialised and even hosts arsenals of the Ordnance Factory Board."
