--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -190,12 +190,13 @@ GER_smarter_navy_mission:0 "Smarter Navy"
 
 #The Haldane Mission
 GER_preparing_for_the_haldane_mission:0 "Preparations for the Haldane Mission"
-GER_preparing_for_the_haldane_mission_desc:0 "Our negotiations with the British have always been stifled by Tirpitz's ambitions for a grand German navy that would be able to challenge Britain's dominance on the seas - and now Tirpitz whishes to pass a fith fleet act. On the other hand, the chancellor has made significant efforts to slow down the naval expansion, these efforts have been noticed by Britain and seemingly have un-alienated them from us. Now Hollweg has taken action to invite the British to Germany to draw the two nations togeather by officially ending the naval race in exchange for British neutrality in future European conflicts. Hollweg has warned the Kaiser that any hint of naval expansion would make his efforts worthless and drive the British away for good.\n\nNow both Tirpitz and Hollweg battle for influence over the Kaiser to convince him to support their own aims.\nCurrently the stance the Kaiser takes is [GER_influence_battle]"
-GER_influence_battle_majority_hollweg:0 "strongly aligned with Hollweg"
-GER_influence_battle_minimal_hollweg:0 "slightly aligned with Hollweg"
+GER_preparing_for_the_haldane_mission_desc:0 "Our negotiations with the British have always been stifled by §cTirpitz's§! ambitions for a grand German navy that would be able to challenge Britain's dominance on the seas - and now §cTirpitz§! whishes to pass a fith fleet act. On the other hand, the chancellor has made significant efforts to slow down the naval expansion, these efforts have been noticed by Britain and seemingly have un-alienated them from us. Now §rHollweg§! has taken action to invite the British to Germany to draw the two nations togeather by officially ending the naval race in exchange for British neutrality in future European conflicts. §rHollweg§! has warned the Kaiser that any hint of naval expansion would make his efforts worthless and drive the British away for good.\n\nNow both §cTirpitz§! and §rHollweg§! battle for influence over the Kaiser to convince him to support their own aims.\nCurrently the stance the Kaiser takes is [GER_influence_battle]"
+GER_haldane_mission:0 "Countdown to the British Mission"
+GER_influence_battle_majority_hollweg:0 "strongly aligned with §rHollweg§!"
+GER_influence_battle_minimal_hollweg:0 "slightly aligned with §rHollweg§!"
 GER_influence_battle_neutral:0 "neutral"
-GER_influence_battle_minimal_tirpitz:0 "slightly aligned with Tirpitz"
-GER_influence_battle_majority_tirpitz:0 "strongly aligned with Tirpitz"
+GER_influence_battle_minimal_tirpitz:0 "slightly aligned with §cTirpitz§!"
+GER_influence_battle_majority_tirpitz:0 "strongly aligned with §cTirpitz§!"
 ww1_germanrework.33.t:0 "The Haldane Mission Scuppered"
 ww1_germanrework.33.d:0 ""
 ww1_germanrework.34.t:0 "The Haldane Mission Successful"
@@ -243,14 +244,14 @@ GER_built_battleships:0 "Has deployed 2 more battleships to the Kriegsmarine"
 GER_built_subs:0 "Has deployed 20 more submarines to the Kriegsmarine"
 
 #Tooltips
-ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit to benefit our economy as a whole"
+ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit to benefit our economy as a whole."
 ww1_germanytooltip2:0 "Whichever faction in the right wing is more powerful will determine the outcome of German politics after the inevitable major war in Europe. However, empowering the nationalists will be difficult and will result in an unstable empire prior to the war"
-ww1_germanytooltip3:0 "This focus will be automatically completed if a §cconservative§! chancellor comes into power"
-ww1_germanytooltip4:0 "After completing this focus we will have to expand the navy by a set amount in a certain amount of time"
-ww1_germanytooltip5:0 "The preperations for the Haldane mission will begin, by picking this focus you are playing the perspective of the pro-British Chancellor, Hollweg"
-ww1_germanytooltip6:0 "The preperations for the Haldane mission will begin, by picking this focus you are playing the perspective of the pro-navy Admiral, Tirpitz"
-ww1_germanytooltip7:0 "Taking this focus will increase the Kaiser's support of Hollweg"
-ww1_germanytooltip8:0 "Taking this focus will increase the Kaiser's support of Tirpitz"
+ww1_germanytooltip3:0 "This focus will be automatically completed if a §cconservative§! chancellor comes into power."
+ww1_germanytooltip4:0 "After completing this focus we will have to expand the navy by a set amount in a certain amount of time."
+ww1_germanytooltip5:0 "The preperations for the Haldane mission will begin, by picking this focus you are playing the perspective of the pro-British Chancellor, §rHollweg§!."
+ww1_germanytooltip6:0 "The preperations for the Haldane mission will begin, by picking this focus you are playing the perspective of the pro-navy Admiral, §cTirpitz§!."
+ww1_germanytooltip7:0 "Taking this focus will increase the Kaiser's support of §rHollweg§!."
+ww1_germanytooltip8:0 "Taking this focus will increase the Kaiser's support of §cTirpitz§!."
 
 #Dynamic Modifiers
 GER_agricultural_incentives:0 "Agricultural Incentives"
