--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4983,6 +4983,7 @@
 
 #####romania
 #events
+strong_monarch:0 "Strong Monarch"
 ww1_romania.18.d:0 "With the king losing faith in the current government, the current Prime Minister has been forced to resign. With the Prime Minister spot vacant, the king will now have to form a new government. The king has several different options available, and must pick the best one. Who shall be appointed to form the next government?"
 ww1_romania.18.a:0 "The PCD will lead a stable government!"
 ww1_romania.18.b:0 "The Liberals should be given another chance"
@@ -4990,7 +4991,7 @@ ww1_romania.18.c:0 "Lets go with the agrarianists in the PC"
 ww1_romania.18.e:0 "Barbu shouldn't rock the boat too much"
 ROM_south_wall.tt:0 "Add §G1§! §YLand Fort§! on every tile bordering [BUL.GetFlag] §YBulgaria§!"
 ROM_strat_forts.tt:0 "Add §G3§! §YLand Fort§! on the cities of §YCaracal§!, §YAlexandria§!, §YCalarasi§!, and §YConstanta§!"
-
+ROM_restore_civilian_control:0 "Hold New Snap Elections"
 ww1_romania.20.t:0 "The Left Boycotts Election for Bucharest Council"
 ww1_romania.20.d:0 "As a way to protest the new conservative government, the PNL and some in the PCD have decided they will be boycotting the elections for Bucharest Council. By showing low turnout will end up being, they hope to prove that the people do not actually support the conservatives. They're free to do this, as it will just ensure we win the election. The conservatives are divided however, in many different factions. While the king appointed Carps faction of the conservatives in power as Prime Minister, the people will have to pick which conservative faction wins this one.\n\nOne of the canidates aligns with Carps more elitist, authoritarian group of conservatives. They believe vast reforms arn't needed for Romania, and that parliament has been given much more power then it really should have. The other canidate comes from the anti Carp faction of the conservatives. Generally younger, and more centrist, they believe Carp holds a threat to Romanian democracy and want greater reforms to Romanias economy."
 ww1_romania.20.a:0 "The pro Carp faction wins!"
