Kingdom of Poland

--- a/localisation/english/POL - Poland_l_english.yml
+++ b/localisation/english/POL - Poland_l_english.yml
@@ -36,6 +36,8 @@
  # Scripted Loc #
 
  ### Decisions ###
+ POL_council_of_state_elections_mission:0 "Council of State Elections"
+ POL_council_of_state_elections_mission_desc:0 ""
  POL_wars_for_the_borders:0 "Wars for the Borders"
  POL_relief_for_lwow:0 "Relief for Lwów"
  POL_relief_for_lwow_desc:0 ""
@@ -276,7 +278,7 @@
  POL_adoption_of_the_constitution_draft:0 "Adoption of the Constitution Draft"
  POL_adoption_of_the_constitution_draft_desc:0 "The Temporary Council of State will adopt a draft of the Polish Constitution and electoral law by Józef Buzek. According to the constitution draft, Poland will be a constitutional monarchy, with power concentrated in the hands of the king and strong self-government."
  POL_regency_council_of_the_kingdom_of_poland:0 "Regency Council of the Kingdom of Poland"
- POL_regency_council_of_the_kingdom_of_poland_desc:0 "In place of the dissolved Temporary Council of State, the Regency Council of the Kingdom of Poland will be enthroned as the supreme authority of the Kingdom of Poland, replacing the king or regent. The council will be composed of Warsaw Mayor Prince Zdzisław Lubomirski, landowner Józef Ostrowski and Warsaw Bishop Aleksander Kakowski."
+ POL_regency_council_of_the_kingdom_of_poland_desc:0 "In place of the dissolved Temporary Council of State, the Regency Council of the Kingdom of Poland will be enthroned as the supreme authority of the Kingdom of Poland, replacing the king or regent. The council will be composed of Warsaw President Prince Zdzisław Lubomirski, landowner Józef Ostrowski and Warsaw Bishop Aleksander Kakowski."
  POL_the_royal_polish_government:0 "The Royal-Polish Government"
  POL_the_royal_polish_government_desc:0 "After extensive negotiations with Governor General Hans Hartwig von Beseler, the Regency Council will finally appoint the first Royal-Polish government. It will be headed by - a prominent lawyer - Jan Kucharzewski. Despite difficult circumstances, this government aims to build the foundations of the state."
  POL_the_crown_council:0 "The Crown Council"
